--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swiper": "^8.4.5"
+    "swiper": "^8.4.5",
+    "antd": "^4.22.5"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
