--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "antd": "^4.22.5",
     "aos": "^2.3.4",
+    "formik": "^2.2.9",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swiper": "^8.4.5",
-    "antd": "^4.22.5"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
