--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "13.1.1",
     "antd": "^4.22.5",
     "aos": "^2.3.4",
+    "axios": "^1.2.2",
     "formik": "^2.2.9",
     "next": "13.1.1",
     "react": "18.2.0",
