--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "axios": "^1.2.2",
     "formik": "^2.2.9",
+    "masonic": "^3.7.0",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
