--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@tinymce/tinymce-react": "^4.3.0",
     "antd": "^4.22.5",
     "aos": "^2.3.4",
     "axios": "^1.2.2",
